comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>título do site</h1>
+            <h1> Cursos Gratuitos </h1>
         </header>    
         <article>
-            <h2> Artigo 001 </h2>
-            <p>Texto artigo 001</p>
+            <h2> Curso de HTML5 com CSS3 </h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur, maxime, ipsa expedita quasi officiis in obcaecati, quod quidem modi laboriosam quis at corrupti neque totam harum? Dolorum eveniet aperiam esse.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2> 
-            <p>Texto artigo 002 </p>
+            <h2>Curso de JavaScript</h2> 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores voluptas, exercitationem mollitia corporis quia quam velit deserunt consequuntur est modi sunt quae quidem facilis molestias perferendis, architecto nostrum sint rem!</p>
         </article>        
     </main>    
 </body>
