--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 <body>
     <main>
         <header>
-            <h1> Cursos Gratuitos </h1>
+            <h1> Explicando... </h1>
+            <h2>introdução a Web</h2>
         </header>    
         <article>
-            <h2> Curso de HTML5 com CSS3 </h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur, maxime, ipsa expedita quasi officiis in obcaecati, quod quidem modi laboriosam quis at corrupti neque totam harum? Dolorum eveniet aperiam esse.</p>
+            <h3> Curso de HTML5 com CSS3 </h2>
+            <p>HTML é uma das linguagens que utilizamos para desenvolver websites. O acrônimo HTML vem do inglês e significa Hypertext Markup Language ou em português Linguagem de Marcação de Hipertexto.</p>
+            <P>O HTML é a liguagem base da internet. Foi criada para ser de fácil entendimento por seres humanos e também por máquinas, como por exemplo o Google ou outros sistemas que percorrem a internet capturando informação</P>
         </article>
         <article>
-            <h2>Curso de JavaScript</h2> 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores voluptas, exercitationem mollitia corporis quia quam velit deserunt consequuntur est modi sunt quae quidem facilis molestias perferendis, architecto nostrum sint rem!</p>
+            <h3>Curso de JavaScript</h2> 
+            <p>É uma linguagem de programação de comportamento que permite a criação de conteúdos dinâmicos, controle de mídias e animações para deixar seu site mais interativo e interessante.</p>
+            <p>O JS ou JavaScript é uma linguagem de programação de alto-nível, criada no meio da década de 90, mais precisamente em 1996 pelo lendário programador Brendan Eich que, além de criar o JavaScript, foi também um dos fundadores da Mozilla Corporation. </p>
         </article>        
     </main>    
 </body>
