--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site curso em video</title>
-    <title>Curso em video</title>
+    <title> Aprendendo um pouquinho de web</title>
+    <title>programas básicos</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <header>
             <h1> Explicando... </h1>
-            <h2>introdução a Web</h2>
+            <h2>introdução à Web</h2>
         </header>    
         <article>
             <h3> Curso de HTML5 com CSS3 </h2>
