--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
             <h2>introdução à Web</h2>
         </header>    
         <article>
-            <h3> Curso de HTML5 com CSS3 </h2>
+            <h3> HTML5 e CSS3 </h2>
             <p>HTML é uma das linguagens que utilizamos para desenvolver websites. O acrônimo HTML vem do inglês e significa Hypertext Markup Language ou em português Linguagem de Marcação de Hipertexto.</p>
             <P>O HTML é a liguagem base da internet. Foi criada para ser de fácil entendimento por seres humanos e também por máquinas, como por exemplo o Google ou outros sistemas que percorrem a internet capturando informação</P>
+                <p>A principal função do CSS3 é abolir as imagens de plano/Background de fundo, bordas arredondadas, apresentar transições e efeitos para criar animações de vários tipos, como um simples relógio de ponteiros.</p>
+                <p></p>
+        
         </article>
         <article>
-            <h3>Curso de JavaScript</h2> 
+            <h3>JavaScript</h3> 
             <p>É uma linguagem de programação de comportamento que permite a criação de conteúdos dinâmicos, controle de mídias e animações para deixar seu site mais interativo e interessante.</p>
             <p>O JS ou JavaScript é uma linguagem de programação de alto-nível, criada no meio da década de 90, mais precisamente em 1996 pelo lendário programador Brendan Eich que, além de criar o JavaScript, foi também um dos fundadores da Mozilla Corporation. </p>
         </article>        
