--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
         </header>    
         <article>
             <h3> HTML5 e CSS3 </h2>
-            <p>HTML é uma das linguagens que utilizamos para desenvolver websites. O acrônimo HTML vem do inglês e significa Hypertext Markup Language ou em português Linguagem de Marcação de Hipertexto.</p>
-            <P>O HTML é a liguagem base da internet. Foi criada para ser de fácil entendimento por seres humanos e também por máquinas, como por exemplo o Google ou outros sistemas que percorrem a internet capturando informação</P>
-                <p>A principal função do CSS3 é abolir as imagens de plano/Background de fundo, bordas arredondadas, apresentar transições e efeitos para criar animações de vários tipos, como um simples relógio de ponteiros.</p>
-                <p></p>
+            <p>>HTML é uma das linguagens que usamos para desenvolver sites. A sigla HTML vem de Hypertext Markup Language.</p>
+            <p>HTML é a linguagem básica da Internet. Ele foi criado para tornar mais fácil para humanos e máquinas entenderem, como o Google ou outros sistemas que cruzam a Internet para capturar informações</P>
+            <p>A principal função do CSS3 é cancelar imagens de plano/Background , bordas arredondadas, introduzir transições e efeitos para criar vários tipos de animações, como relógios analógicos simples.</p>                
         
         </article>
         <article>
             <h3>JavaScript</h3> 
-            <p>É uma linguagem de programação de comportamento que permite a criação de conteúdos dinâmicos, controle de mídias e animações para deixar seu site mais interativo e interessante.</p>
-            <p>O JS ou JavaScript é uma linguagem de programação de alto-nível, criada no meio da década de 90, mais precisamente em 1996 pelo lendário programador Brendan Eich que, além de criar o JavaScript, foi também um dos fundadores da Mozilla Corporation. </p>
+            <p>É uma linguagem de programação de comportamento que permite criar conteúdo dinâmico, controles de mídia e animações para tornar seu site mais interativo e interessante.</p>
+            <p>JS ou JavaScript é uma linguagem de programação de alto nível, criada em meados da década de 1990, ou mais precisamente pelo lendário programador Brendan Eich em 1996. Além de criar JavaScript, ele também é um dos fundadores da Mozilla Firefox. </p>
         </article>        
     </main>    
 </body>
