--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>    
         <article>
             <h3> HTML5 e CSS3 </h2>
-            <p>>HTML é uma das linguagens que usamos para desenvolver sites. A sigla HTML vem de Hypertext Markup Language.</p>
+            <p>HTML é uma das linguagens que usamos para desenvolver sites. A sigla HTML vem de Hypertext Markup Language.</p>
             <p>HTML é a linguagem básica da Internet. Ele foi criado para tornar mais fácil para humanos e máquinas entenderem, como o Google ou outros sistemas que cruzam a Internet para capturar informações</P>
             <p>A principal função do CSS3 é cancelar imagens de plano/Background , bordas arredondadas, introduzir transições e efeitos para criar vários tipos de animações, como relógios analógicos simples.</p>                
         
